syntax = "proto3";

package api;

import "google/api/annotations.proto";
option go_package = "generate/desc";

message Empty {}

message User {
  int64 id = 1;
  string name = 2;
  int32 age = 3;
}

service QuoteService {
  rpc GetUser(UserRequest) returns (User) {
    option (google.api.http) = {
      get: "/user"
    };
  };
  rpc DeleteUser(UserRequest) returns (ResultMessage){
    option (google.api.http) = {
      delete : "/user"
    };
  };
}

message UserRequest {
  int64 id = 1;
}

message ResultMessage {
  string result = 1;
}